fix: fix missing id from update hotel model
